# Serch_Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/: Config.cpp  Database.cpp  Indexer.cpp  SearchServer.cpp  Spider.cpp
h/: Config.h  Database.h  Indexer.h  SearchServer.h  Spider.h
html/: index.html  results.html
